yoda spacing fixes

--- a/public/myStyles.css
+++ b/public/myStyles.css
@@ -57,7 +57,7 @@ p.outputText{
     position: absolute;
     width: 22em;
     padding: 30px;
-    top: 30%;
+    top: 40%;
     left: 50%;
     margin-left: -190px;
     text-align: center;
